# simpletracker-ros2-ws

./: .gitignore  README.md  build.sh  end-points.md  launch.sh  launch_monitoring.sh  launch_qhy.sh  launch_rosbag_replay.sh  launch_simulation.sh  launch_simulation_recorder.sh  message-types.md  rosbridge_websocket.launch  setup.sh  setup_build_launch.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yaml  ros.yaml
monitoring/: docker-compose.yml  prometheus.yml  readme.md  run_tracker.sh
src/: ros2.repos
src/camera_mock/: package.xml  setup.cfg  setup.py
src/camera_mock/camera_mock/: camera_node.py
src/cv_basics/: package.xml  setup.cfg  setup.py
src/cv_basics/cv_basics/: webcam_pub.py
src/simple_tracker/: package.xml  setup.cfg  setup.py
src/simple_tracker/simple_tracker/: mask.py  (+13 more)
src/simple_tracker_activity_recorder/: package.xml  setup.cfg  setup.py
src/simple_tracker_annotated_frame_provider/: package.xml  setup.cfg  setup.py
src/simple_tracker_background_subtraction_provider/: package.xml  setup.cfg  setup.py
src/simple_tracker_blob_provider/: package.xml  setup.cfg  setup.py
src/simple_tracker_camera/: package.xml  setup.cfg  setup.py
src/simple_tracker_configuration/: package.xml  setup.cfg  setup.py
src/simple_tracker_dense_optical_flow_provider/: package.xml  setup.cfg  setup.py
src/simple_tracker_dense_optical_flow_provider/simple_tracker_dense_optical_flow_provider/: dense_optical_flow.py  dense_optical_flow_provider_node.py
src/simple_tracker_detection_provider/: package.xml  setup.cfg  setup.py
src/simple_tracker_environment_data_provider/: package.xml  setup.cfg  setup.py
src/simple_tracker_frame_provider/: package.xml  setup.cfg  setup.py
src/simple_tracker_interfaces/: CMakeLists.txt  package.xml
src/simple_tracker_launch/: package.xml  setup.cfg  setup.py
src/simple_tracker_mask_provider/: package.xml  setup.cfg  setup.py
src/simple_tracker_mask_provider/simple_tracker_mask_provider/: mask_provider_node.py
src/simple_tracker_monitor/: package.xml  setup.cfg  setup.py
src/simple_tracker_observer/: package.xml  setup.cfg  setup.py
src/simple_tracker_shared/: package.xml  setup.cfg  setup.py
src/simple_tracker_single_frame_classifier/: package.xml  setup.cfg  setup.py
src/simple_tracker_track_provider/: package.xml  setup.cfg  setup.py
src/simple_tracker_video/: package.xml  setup.cfg  setup.py
src/simple_tracker_visualisers/: package.xml  setup.cfg  setup.py
src/simulated_video_provider/: package.xml  setup.cfg  setup.py
src/synthetic_data_provider/: package.xml  setup.cfg  setup.py
src/tracker_classification/: package.xml  setup.cfg  setup.py
(+105 files in other folders)
