<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_tracker_dense_optical_flow_provider</name>
  <version>0.0.0</version>
  <description>This package is focused on calculating dense optical flow from a sequence of greyscale images. This operation maps how every pixel in the image moves from one frame to the next. Optical flow is the pattern of apparent motion of image objects between two consecutive frames caused by the movement of the object or the camera.</description>
  <maintainer email="michael.groenewald@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-opencv</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>simple_tracker_shared</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
