<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_tracker_mask_provider</name>
  <version>0.0.0</version>
  <description>The simple_tracker_mask_provider package provides a ROS2 node that allows for the retrieval and updating of mask images used in a tracking system. The package includes services for getting and updating the mask image, and uses OpenCV to process the mask image files. The package is designed to work with ROS2 and depends on the rclpy, image_transport, cv_bridge, sensor_msgs, std_msgs, and python3-opencv packages.</description>
  <maintainer email="michael.groenewald@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-opencv</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>simple_tracker_shared</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
